--- a/index.css
+++ b/index.css
@@ -99,6 +99,27 @@
 }
 
 
+@media (min-width: 427px) and (max-width: 750px) {
+    
+    .line{
+        height: 0.3rem;
+        width: 50rem;
+        box-shadow: 2px 2px 2px 2px rgb(0, 0, 0)inset;
+    
+    }
+    .info1{
+        text-align: center;
+        margin-top: 7rem;
+        font-size: 1.5rem;
+        font-family: cursive;
+        margin-bottom: 3rem;
+        margin-left: 10rem;
+        margin-right: -18rem;
+    }
+    .poa-kids{
+        margin-bottom: 1rem;
+    }
+    }
 
 
 /* small devices (phones) */
@@ -248,6 +269,11 @@
                 box-shadow: 2px 2px 2px 2px rgb(0, 0, 0)inset;        
             }
 
+            .start {
+                display: flex;
+                gap: 1.5rem;
+                margin-left: 18rem;
+            }
             .info1{
                 text-align: center;
                 margin-top: 7rem;
@@ -268,7 +294,7 @@
     }
 
     .line {
-        width: 70rem; /* Adjust as necessary */
+        width: 70rem; 
     }
 
     .info1 {
@@ -282,7 +308,7 @@
 
 
 /* For devices with width between 750px and 1209.98px */
-@media (min-width: 750px) and (max-width: 1209.98px) {
+/* @media (min-width: 750px) and (max-width: 1209.98px) {
     .start {
         display: flex;
         gap: 1.5rem;
@@ -291,13 +317,13 @@
 }
 
 /* For devices with width between 1210px and 1499.98px */
-@media (min-width: 1210px) and (max-width: 1499.98px) {
+/* @media (min-width: 1210px) and (max-width: 1499.98px) {
     .start {
         display: flex;
         gap: 1.5rem;
         margin-left: 30rem;
-    }
-}
+    } */
+/* }  */
 
 
 
